--- a/package.json
+++ b/package.json
@@ -1,52 +1,19 @@
 {
-  "name": "vue",
-  "version": "0.1.0",
+  "name": "yet-another-vue-todo",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   },
   "dependencies": {
-    "@vue/cli-plugin-babel": "4.1.1",
-    "@vue/cli-plugin-eslint": "4.1.1",
-    "@vue/cli-service": "4.1.1",
-    "vue": "^2.6.11",
+    "vue": "2.6.11",
+    "vue-hot-reload-api": "^2.3.4",
     "vue-router": "3.1.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.0.1",
+    "@vue/component-compiler-utils": "^3.1.1",
+    "parcel-bundler": "1.12.4",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "keywords": [
-    "vue",
-    "vuejs"
-  ],
-  "description": null
+  }
 }
