--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.9.0",
   "private": true,
   "scripts": {
-    "dev": "parcel public/index.html",
+    "start": "echo \"Please run 'yarn dev' after 'yarn install'\"",
+    "dev": "parcel public/index.html -p 8000",
     "build": "parcel build public/index.html"
   },
   "dependencies": {
+    "consola": "2.11.3",
     "vue": "2.6.11",
-    "vue-hot-reload-api": "^2.3.4",
+    "vue-hot-reload-api": "2.3.4",
     "vue-router": "3.1.4"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.1.1",
+    "@vue/component-compiler-utils": "3.1.1",
     "parcel-bundler": "1.12.4",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "2.6.11"
   }
 }
