Run CI only on tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - 'lts/*'
+  - lts/*
 cache: yarn
-
 install:
   - yarn install
 script:
@@ -12,8 +11,8 @@ deploy:
   edge: true
   cleanup: false
   keep_history: true
-  token: $GITHUB_TOKEN
+  token: '$GITHUB_TOKEN'
   target_branch: gh-pages
   local_dir: dist
   on:
-    branch: master
+    tags: true
