Fix conditional build setting

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - lts/*
 cache: yarn
+if: tag IS present
 install:
   - yarn install
 script:
@@ -14,5 +15,3 @@ deploy:
   token: '$GITHUB_TOKEN'
   target_branch: gh-pages
   local_dir: dist
-  on:
-    tags: true
